2025-04-14T02:02:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14435877958 # 915
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-14
* notice: last 14d: unq all: 14 53
* notice: prev accum: outdated-unq outdated-all / unq all: 1035 5315 / 1048 5367
* notice: next accum: outdated-unq outdated-all / unq all: 1035 5315 / 1049 5368
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-13]

2025-04-10T01:57:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14370637732 # 907
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-10
* notice: last 14d: unq all: 13 52
* notice: prev accum: outdated-unq outdated-all / unq all: 1032 5310 / 1046 5359
* notice: next accum: outdated-unq outdated-all / unq all: 1035 5315 / 1048 5367
* notice: prev exec diff / last date diff / accum: unq all: +2 +8 -0 -0 / +3 +10 -0 -0 / 3 10
* notice: removed / changed dates: [2025-03-26] / [2025-04-09]

2025-04-09T12:51:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14357603593 # 906
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-09
* notice: last 14d: unq all: 12 47
* notice: prev accum: outdated-unq outdated-all / unq all: 1032 5310 / 1045 5357
* notice: next accum: outdated-unq outdated-all / unq all: 1032 5310 / 1046 5359
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -1 -2 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-03-26 2025-04-09]

2025-04-09T01:57:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14347287229 # 905