@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-14T02:02:24Z",
-  "count_outdated" : 5315,
-  "uniques_outdated" : 1035,
-  "count" : 5368,
-  "uniques" : 1049,
+  "timestamp" : "2025-04-15T12:51:05Z",
+  "count_outdated" : 5317,
+  "uniques_outdated" : 1036,
+  "count" : 5370,
+  "uniques" : 1050,
   "views" : [
-    {
-      "timestamp": "2025-04-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-02T00:00:00Z",
       "count": 7,
@@ -73,6 +64,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-15T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
