@@ -3,11 +3,6 @@
   "uniques": 14,
   "views": [
     {
-      "timestamp": "2025-04-01T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-04-02T00:00:00Z",
       "count": 7,
       "uniques": 1
@@ -40,6 +35,11 @@
     {
       "timestamp": "2025-04-13T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-15T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
